Unused References are presented in machine's default text editor and allows excluding references from removal. 
A final confirmation is also added so no changes are done should user decides to change his/her mind.